--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -371,6 +371,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
              * ********
              */
             openResourceSelector: function () {
+                if (this.disabled) return;
+
                 var ownerForm = this.findOwnerForm(this);
                 var evt = this.fire('things-resource-selector-open-dialog', ownerForm, {
                     cancelable: true
@@ -404,6 +406,8 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
              * ********
              */
             clearValue: function () {
+                if (this.disabled) return;
+                
                 var obj = {};
                 obj[this.resourceIdField] = null;
                 obj[this.resourceTitleField] = null;
