--- a/elements.html
+++ b/elements.html
@@ -2,16 +2,17 @@
 @license
 Copyright © HatioLab Inc. All rights reserved.
 -->
-<link rel="import" href="things-resource-dialog.html">
-<link rel="import" href="things-resource-field.html">
-<link rel="import" href="things-resource-selector.html">
-<link rel="import" href="things-resource-selector-behavior.html">
-<link rel="import" href="things-resource-format-selector.html">
-<link rel="import" href="things-reference-query.html">
-<link rel="import" href="things-selector-content.html">
-<link rel="import" href="things-selector-content-by-menu.html">
-<link rel="import" href="things-selector-content-by-entity.html">
-<link rel="import" href="things-selector-content-by-service.html">
-<link rel="import" href="things-selector-form-behavior.html">
-<link rel="import" href="things-selector-form-search-behavior.html">
-<link rel="import" href="things-selector-form.html">
+<link rel="import" href="things-resource-dialog.html" />
+<link rel="import" href="things-resource-field.html" />
+<link rel="import" href="things-resource-selector.html" />
+<link rel="import" href="things-resource-selector-behavior.html" />
+<link rel="import" href="things-resource-format-selector.html" />
+<link rel="import" href="things-reference-query.html" />
+<link rel="import" href="things-selector-content.html" />
+<link rel="import" href="things-selector-content-by-menu.html" />
+<link rel="import" href="things-selector-content-by-entity.html" />
+<link rel="import" href="things-selector-content-by-service.html" />
+<link rel="import" href="things-selector-form-behavior.html" />
+<link rel="import" href="things-selector-form-search-behavior.html" />
+<link rel="import" href="things-selector-form.html" />
+<link rel="import" href="./things-resource-reference-query.html" />
